fix crash and bug